# pico_ds1631

./: README.md  convert2uf2.bat
src/: CMakeLists.txt  ds1631.c
